--- a/Project.toml
+++ b/Project.toml
@@ -3,6 +3,10 @@ uuid = "dc8f3b54-baf0-491e-b310-4cc607c077ab"
 authors = ["Ben Cardoen <26388277+bencardoen@users.noreply.github.com> and contributors"]
 version = "0.1.0"
 
+[deps]
+Logging = "56ddb016-857b-54e1-b83d-db4d58db5568"
+Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
+
 [compat]
 julia = "1.6"
 
