Fix swapping of argument order

--- a/example_recipes/collect_csvs_in_table.toml
+++ b/example_recipes/collect_csvs_in_table.toml
@@ -1,9 +1,10 @@
 [global]
 act_on_success=true
-inputdirectory = "testdir"
+inputdirectory = "testdir/inputtables"
 # Using a list with 'table' in the name will trigger the fusing of anything added to it (in csv format) to 1 table called $name.csv
 # It's up to you to verify that this is possible, loading a tif file into a table is not going to work, and fusing csvs with different columns will not work either
 file_lists = ["table"]
 [any]
 conditions = ["is_csv_file"]
-actions=[["add_to_file_list", "table"]]
+actions = ["warn_on_fail"]
+# actions=[["add_to_file_list", "table"]]
