--- a/Project.toml
+++ b/Project.toml
@@ -15,6 +15,7 @@ Logging = "56ddb016-857b-54e1-b83d-db4d58db5568"
 LoggingExtras = "e6f89c97-d47a-5376-807f-9c37f3926c36"
 MAT = "23992714-dd62-5051-b70f-ba57cb901cac"
 Match = "7eb4fadd-790c-5f42-8a69-bfa0b872bfbf"
+PackageCompiler = "9b87118b-4619-50d2-8e1e-99f35a4d4d9d"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 SPECHT = "9bf52c6b-c98d-48f8-80c6-8dab0ddc382a"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
