Rework DataFrame ops API - Use type dispatch to allow singular and vector entries - Use a [col, op[, val]+ syntax, rather than [c, c, ...,] ..., which   needed alignment and thus isnan needed an ignored argument

--- a/example_recipes/dataframeops.toml
+++ b/example_recipes/dataframeops.toml
@@ -5,4 +5,4 @@ inputdirectory = "testdir"
 # Whatever is not defined below, e.g. too deep of a level --> fail and delete
 all=true
 conditions=["is_csv_file", "has_upper"]
-actions=[{name_transform=["tolowercase"], content_transform=[["extract", ["x1"], ["less"], [10]]], mode="copy"}]
+actions=[{name_transform=["tolowercase"], content_transform=[["extract", ["x1", "less", 10]]], mode="copy"}]
