Integrate lookup functions for new common_actions/conditions in global section

--- a/example_recipes/saved_actions.toml
+++ b/example_recipes/saved_actions.toml
@@ -7,9 +7,9 @@ common_conditions = {is_3d_channel=["is_tif_file", "is_3d_img", "ends_with_integ
 [any]
 conditions=["always_fails"]
 actions=["react"]
-[1]
+[level_1]
 conditions=["isdir"]
 actions=["react"]
-[2]
+[level_2]
 conditions=["is_3d_channel"]
 actions=["react"]
