--- a/example_recipes/saved_actions.toml
+++ b/example_recipes/saved_actions.toml
@@ -1,16 +1,9 @@
 [global]
 act_on_success=true
-# hierarchical=true
 inputdirectory = "testdir"
-outputdirectory = "outdir"
+outputdirectory = "outputdir"
 common_actions = {react=[["all", "show_warning", ["log_to_file", "errors.txt"], "remove"]]}
-common_conditions = {is_3d_channel=[["all", "is_tif_file", "is_3d_img", "ends_with_integer"]]}
+common_conditions = {is_3d_channel=[["all", "is_tif_file", "is_3d_img", "filename_ends_with_integer"]]}
 [any]
 conditions=["is_3d_channel"]
 actions=["react"]
-# [level_1]
-# conditions=["isdir"]
-# actions=["react"]
-# [level_2]
-# conditions=["is_3d_channel"]
-# actions=["react"]
