--- a/example_recipes/image_roi.toml
+++ b/example_recipes/image_roi.toml
@@ -5,7 +5,8 @@
 act_on_success=true
 inputdirectory = "testdir"
 [any]
-conditions=["is_tif_file"]
+all=true
+conditions=["is_tif_file", ["size_image", [[1, ">", 4], [2, ">", 4], [3, "between", [1, 1000]]]]]
 actions=[{name_transform=["tolowercase"], content_transform=[["slice_image", [1,3], [[5,10],[4,7]]]], mode="copy"}]
 
 ## Image slicing
