Rework aggregation so more complex map/reduce workflows are supported - Add support for chained functions in aggregator : X -> sink => X ->   f(g(h(X)) -> sink - Fix bug where lists were overwritten when defined multiple times - Add functions with vectorized equivalents so "f" is defined for vector   and arg - Add flattening to get rid of complexity on aggregator

--- a/example_recipes/mercs.toml
+++ b/example_recipes/mercs.toml
@@ -49,4 +49,4 @@ actions=["do_on_invalid"]
 [level_5]
 conditions=["is_3d_channel"]
 actions=["do_on_invalid"]
-counter_actions=[["add_to_file_list", "inlist"]]
+counter_actions=[["add_path_to_file_list", "inlist"], ["add_path_to_file_list", "outlist"]]
