--- a/example_recipes/full_api.toml
+++ b/example_recipes/full_api.toml
@@ -5,16 +5,15 @@ act_on_success=true
 hierarchical=true
 parallel=true
 regex=true
-file_lists = [{name="table", transformer=["extract_columns", ["x1"]], aggregator="concat_to_table"},{name="objects", aggregator=[["describe_objects","concat_to_table"]]}]
+file_lists = [{name="table", transformer=["extract_columns", ["x1"]], aggregator="concat_to_table"},{name="objects", aggregator=[["describe_objects","concat_to_table"]]},{name="channels", aggregator=[["describe_image","concat_to_table"]]}]
 inputdirectory = "testdir"
 outputdirectory = "outputdir"
 common_actions = {react=[["all", "show_warning", ["log_to_file", "errors.txt"], "remove"]]}
 common_conditions = {is_3d_channel=[["all", "is_tif_file", "is_3d_img", "filename_ends_with_integer"]]}
 [any]
 conditions=["is_csv_file", "is_tif_file", "is_tif_file"]
-actions=[
-        ["add_to_file_list", "table"],
-         ["add_to_file_list", "objects"],
+actions=[["add_to_file_list", "table"
+        ["add_to_file_list", ["channel", "objects"]],
         {name_transform=["tolowercase"], content_transform=[
                         ["slice_image", [1,2],[[20,50],[20,50]]],
                         ["gaussian", 3],
