--- a/example_recipes/full_api.toml
+++ b/example_recipes/full_api.toml
@@ -12,18 +12,18 @@ common_actions = {react=[["all", "show_warning", ["log_to_file", "errors.txt"], 
 common_conditions = {is_3d_channel=[["all", "is_tif_file", "is_3d_img", "filename_ends_with_integer"]]}
 [any]
 conditions=["is_csv_file", "is_tif_file", "is_tif_file"]
-actions=[["add_to_file_list", "table"
-        ["add_to_file_list", ["channel", "objects"]],
-        {name_transform=["tolowercase"], content_transform=[
+actions=[["->", "table"],
+         ["->", ["channel", "objects"]],
+         {name_transform=["tolowercase"], content_transform=[
                         ["slice_image", [1,2],[[20,50],[20,50]]],
                         ["gaussian", 3],
-                        "laplacian",
+                         "laplacian",
                         ["threshold_image", "abs >", 0.01],
                         ["apply_to_image", ["abs"]],
-                        "otsu_threshold_image",
-                        "erode_image"
+                         "otsu_threshold_image",
+                         "erode_image"
                         ], mode="copy"}
-        ]
+       ]
 [level_1]
 conditions = ["isdir"]
 actions = ["show_warning"]
