Add threaded aggregation, reset cpu_arch for now

--- a/example_recipes/mercs.toml
+++ b/example_recipes/mercs.toml
@@ -2,22 +2,15 @@
 # act_on_success=false
 inputdirectory = "/tmp/testdataset"
 hierarchical=true
-# parallel=false
+traversal="topdown"
+parallel=true
 regex=true
 common_actions = {do_on_invalid=[["all", "show_warning", ["log_to_file", "errors.txt"]]]}
 common_conditions = {is_3d_channel=[["all", "is_tif_file", "is_3d_img", "filename_ends_with_integer"]], dir_only=[["all", "isdir", ["not", "is_hidden"]]]}
-file_lists=[{name="in", aggregator=[["filepath",
-                                          "sort",
-                                          "unique",
-                                          "shared_list_to_file"]]},
-              {name="out", aggregator=[[["change_path", "/tmp/output"],
-                                         "filepath","sort","unique",
-                                         "shared_list_to_file"]]}
-              {name="objects", aggregator=[["describe_objects",
-                                          "concat_to_table"]]},
-              {name="channels", aggregator=[["describe_image",
-                                          "concat_to_table"]]},
-              ]
+file_lists=[{name="in", aggregator=[["filepath","sort","unique","shared_list_to_file"]]},
+              {name="out", aggregator=[[["change_path", "/tmp/output"],"filepath","sort","unique","shared_list_to_file"]]},
+              {name="objects", aggregator=[["describe_objects","concat_to_table"]]},
+              {name="channels", aggregator=[["describe_image","concat_to_table"]]},]
 [any]
 all=true
 conditions=["never"]
@@ -45,4 +38,4 @@ actions=["do_on_invalid"]
 [level_5]
 conditions=["is_3d_channel"]
 actions=["do_on_invalid"]
-counter_actions=[["add_to_file_list", "inlist"], ["add_to_file_list", "outlist"], ["add_to_file_list", "objects"], ["add_to_file_list", "channels"]]
+counter_actions=[["->", ["in","out","objects","channels"]]]
