Add documentation entries

--- a/example_recipes/image_pipeline.toml
+++ b/example_recipes/image_pipeline.toml
@@ -6,6 +6,11 @@ act_on_success=true
 inputdirectory = "testdir"
 [any]
 conditions=["is_tif_file"]
-actions=[{name_transform=["tolowercase"], content_transform=[ ["gaussian", 3], "laplacian", ["threshold_image", "abs >", 0.01], ["apply_to_image", ["abs"]], "otsu_threshold_image", "erode_image"], mode="copy"}]
+actions=[{name_transform=["tolowercase"], content_transform=[ ["gaussian", 3],
+                                                                "laplacian",
+                                                                ["threshold_image", "abs >", 0.01],
+                                                                ["apply_to_image", ["abs"]],
+                                                                "otsu_threshold_image",
+                                                                "erode_image"], mode="copy"}]
 # Full syntax
 # {name_transform=[entry+], content_transform=[entry+], mode={copy, move, inplace}}
