--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,4 +11,5 @@ jobs:
       - run: ls -alsht
       - run:
           command: julia -e 'using Pkg; Pkg.add("Coverage"); Pkg.add(url="https://github.com/bencardoen/ERGO.jl.git"); Pkg.add(url="https://github.com/bencardoen/SPECHT.jl.git"); Pkg.add(url="git@github.com:bencardoen/DataCurator.jl.git"); Pkg.build("DataCurator"); Pkg.test("DataCurator", coverage=true); using Coverage;'
+      - run:
           command: julia -e 'using Pkg; cd(Pkg.dir("DataCurator")); Pkg.add("Coverage"); using Coverage; Codecov.submit(Codecov.process_folder())'
