--- a/Project.toml
+++ b/Project.toml
@@ -24,6 +24,7 @@ Pkg = "44cfe95a-1eb2-52ea-b672-e2afdf69b78f"
 ProgressMeter = "92933f4c-e287-5a05-a399-4b506db050ca"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 Slack = "40bba58d-c7f1-4fe3-926e-2f246c890c3c"
+SlurmMonitor = "e02b837c-d203-40fc-8e6b-ea2c0c38557b"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 TOML = "fa267f1f-6049-4f14-aa54-33bafae1ed76"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
