--- a/example_recipes/aggregate_columns_csv.toml
+++ b/example_recipes/aggregate_columns_csv.toml
@@ -2,10 +2,8 @@
 act_on_success=true
 file_lists = [{name="table", transformer=["groupbycolumn", ["x1", "x2"], ["x3"], ["sum"], ["x3_sum"]], aggregator="concat_to_table"}]
 inputdirectory = "testdir"
+owncloud_configuration = "owncloud.json"
 [any]
 all=true
-# conditions=[["endswith", "*.tif"]]
 conditions = ["is_csv_file"]
-# actions=[["count", "c1"]]
 actions=[["add_to_file_list", "table"]]
-#actions=[["count", "c1"], ["count", "c2"], ["add_to_file_list", "infiles"], ["add_to_file_list", "outfiles"]]
