--- a/td.toml
+++ b/td.toml
@@ -5,6 +5,8 @@ hierarchical=true
 traversal="topdown"
 parallel=true
 regex=true
+scp_configuration = "ssh.json"
+owncloud_configuration = "owncloud.json"
 common_actions = {do_on_invalid=[["all", "show_warning", ["log_to_file", "errors.txt"]]]}
 common_conditions = {is_3d_channel=[["all", "is_tif_file", "is_3d_img", "filename_ends_with_integer"]], dir_only=[["all", "isdir", ["not", "is_hidden"]]]}
 file_lists=[{name="in", aggregator=[["filepath","sort","unique","shared_list_to_file"]]},
@@ -12,7 +14,6 @@ file_lists=[{name="in", aggregator=[["filepath","sort","unique","shared_list_to_
               {name="objects", aggregator=[["describe_objects","concat_to_table"]]},
               {name="channels", aggregator=[["describe_image","concat_to_table"]]},]
 [any]
-all=true
 conditions=["never"]
 actions=["do_on_invalid"]
 
