--- a/Project.toml
+++ b/Project.toml
@@ -32,6 +32,7 @@ RCall = "6f49c342-dc21-5d91-9882-a32aef131414"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 Slack = "40bba58d-c7f1-4fe3-926e-2f246c890c3c"
 SlurmMonitor = "e02b837c-d203-40fc-8e6b-ea2c0c38557b"
+SmlmTools = "bd0e0daa-fc13-11e8-3c42-ad9bbc1c8ca1"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 TOML = "fa267f1f-6049-4f14-aa54-33bafae1ed76"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
