--- a/example_recipes/coloc_and_align.toml
+++ b/example_recipes/coloc_and_align.toml
@@ -4,5 +4,4 @@ inputdirectory = "testdir"
 [any]
 all=true
 conditions = ["is_dir"]
-actions=[["smlm_alignment","p.csv", "is_thunderstorm"], ["image_colocalization", 3, "C[1,2].tif", "is_2d_img"]]
-# image_colocalization(t, 3, "[1,2].tif", "is_2d_img", t)
+actions=[["smlm_alignment","p.csv", "is_thunderstorm"], ["image_colocalization", 3, "C[1,2].tif", "is_2d_img", "filter"]]
