--- a/example_recipes/coloc_and_align_gsd.toml
+++ b/example_recipes/coloc_and_align_gsd.toml
@@ -4,4 +4,4 @@ inputdirectory = "testdir"
 [any]
 all=true
 conditions = ["is_dir"]
-actions=[["smlm_alignment",".bin", "is_gsd"], ["image_colocalization", 3, "C[1,2].tif", "is_2d_img", "filter"]]
+actions=[["smlm_alignment",".bin", "is_gsd", 400], ["image_colocalization", 3, "C[1,2].tif", "is_2d_img", "filter"]]
