--- a/Project.toml
+++ b/Project.toml
@@ -30,6 +30,7 @@ ProgressMeter = "92933f4c-e287-5a05-a399-4b506db050ca"
 PyCall = "438e738f-606a-5dbb-bf0a-cddfbfd45ab0"
 RCall = "6f49c342-dc21-5d91-9882-a32aef131414"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
+SQLite = "0aa819cd-b072-5ff4-a722-6bc24af294d9"
 Slack = "40bba58d-c7f1-4fe3-926e-2f246c890c3c"
 SlurmMonitor = "e02b837c-d203-40fc-8e6b-ea2c0c38557b"
 SmlmTools = "bd0e0daa-fc13-11e8-3c42-ad9bbc1c8ca1"
